v2.5.7 - :art::iphone: Fix the hovers of the Projetcs page on iphone

--- a/styles/projects.css
+++ b/styles/projects.css
@@ -143,4 +143,8 @@ body main .container > div a:hover
   {
     margin-bottom: 10vh;
   }
+  body main .container > div a:hover
+  {
+    opacity: 0;
+  }
 }
